--- a/HTML_PAGES/pokemon.html
+++ b/HTML_PAGES/pokemon.html
@@ -34,20 +34,20 @@
 		<header class="container">
 			<div id="headerPage">
 				<!-- Logo -->
-				<a href="../index.html">
+				<a href="../index.html" aria-label="Retour à l'accueil">
 					<img src="../IMG/Logo-Pokemon-128.png" alt="Logo RocketDev" />
 				</a>
 
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
-					<button id="darkLightMode">
-						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" alt="Icon Dark Light Mode" />
+					<button id="darkLightMode" aria-label="Changer de mode (mode clair ou mode sombre)">
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" aria-hidden="true" />
 					</button>
 					<form id="searchPokemon">
-						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
+						<input id="search" type="search" required placeholder="Recherche" />
 						<div>
 							<input type="submit" id="searchSubmit" placeholder="Rechercher" />
-							<i class="fa-solid fa-magnifying-glass"></i>
+							<i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
 						</div>
 					</form>
 					<button class="cta primaryButton" id="teamButton">
@@ -80,7 +80,7 @@
 							<div>
 								<button class="cta secondaryButton" id="addPokemonTeam">
 									Ajouter
-									<i id="addPokemonIcon" class="fa-solid fa-plus"></i>
+									<i id="addPokemonIcon" class="fa-solid fa-plus" aria-hidden="true"></i>
 								</button>
 							</div>
 						</nav>
