--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 	<body>
 		<!-- Animation on Load -->
 		<div class="loaderWrapper">
-			<img class="loader" src="./IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" />
+			<img class="loader" src="./IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" loading="lazy"/>
 			<div class="loaderSection sectionLeft"></div>
 			<div class="loaderSection sectionRight"></div>
 		</div>
 		<!-- Header page -->
-		<header class="container">
+		<header id="sticky" class="container">
 			<div id="headerPage">
 				<!-- Logo -->
 				<a href="#" aria-label="Retour à l'accueil">
