--- a/HTML_PAGES/pokemon.html
+++ b/HTML_PAGES/pokemon.html
@@ -31,7 +31,7 @@
 		</div>
 
 		<!-- Header page -->
-		<header class="container">
+		<header id="sticky" class="container">
 			<div id="headerPage">
 				<!-- Logo -->
 				<a href="../index.html" aria-label="Retour à l'accueil">
