--- a/HTML_PAGES/rgpd.html
+++ b/HTML_PAGES/rgpd.html
@@ -30,7 +30,7 @@
 			<div class="loaderSection sectionRight"></div>
 		</div>
 		<!-- Header page -->
-		<header class="container">
+		<header id="sticky" class="container">
 			<div id="headerPage">
 				<!-- Logo -->
 				<a href="../index.html" aria-label="Retour à l'accueil">
