--- a/HTML_PAGES/error-page.html
+++ b/HTML_PAGES/error-page.html
@@ -25,7 +25,7 @@
 	<body>
 		<!-- Animation on Load -->
 		<div class="loaderWrapper">
-			<img class="loader" src="../IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" />
+			<img class="loader" src="../IMG/Pokeball-Image-Color.png" width="10rem" height="auto" alt="Pokeball animation chargement de page" loading="lazy" />
 			<div class="loaderSection sectionLeft"></div>
 			<div class="loaderSection sectionRight"></div>
 		</div>
@@ -34,13 +34,13 @@
 			<div id="headerPage">
 				<!-- Logo -->
 				<a href="../index.html" aria-label="Retour à l'accueil">
-					<img src="../IMG/Logo-Pokemon-128.png" alt="Logo RocketDev" />
+					<img src="../IMG/Logo-Pokemon-128.png" width="2rem" height="auto" alt="Logo RocketDev" />
 				</a>
 
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode" aria-label="Changer de mode (mode clair ou mode sombre)">
-						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" aria-hidden="true" />
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" loading="lazy" aria-hidden="true" />
 					</button>
 				</div>
 			</div>
@@ -56,7 +56,7 @@
 					<!-- Section informations pokemon Zf -->
 					<div class="PokemonInfos">
 						<!-- Name pokemon -->
-						<h2 class="PokemonName">Erreur 404, un Missingno est apparu !</h2>
+						<span class="PokemonName titleText">Erreur 404, un Missingno est apparu !</span>
 						<span class="IdPokemon">"C'est trop dangereux ici, tu dois partir avant qu'il ne soit trop tard !"</span>
 
 						<nav class="sectionCardNav">
@@ -98,7 +98,7 @@
 					</div>
 					<!-- Img pokemon -->
 					<figure id="figurePokemonZf">
-						<img src="../IMG/Missingo-Pokemon-Image.png" id="Missingno" alt="Sprite du pokémon Missingno" />
+						<img src="../IMG/Missingo-Pokemon-Image.png" width="40rem" height="auto" id="Missingno" alt="Sprite du pokémon Missingno" />
 					</figure>
 				</div>
 			</section>
