--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<body>
 		<!-- Animation on Load -->
 		<div class="loaderWrapper">
-			<img class="loader" src="./IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" loading="lazy"/>
+			<img class="loader" src="./IMG/Pokeball-Image-Color.png" width="10rem" height="auto" alt="Pokeball animation chargement de page" loading="lazy" />
 			<div class="loaderSection sectionLeft"></div>
 			<div class="loaderSection sectionRight"></div>
 		</div>
@@ -36,13 +36,13 @@
 			<div id="headerPage">
 				<!-- Logo -->
 				<a href="#" aria-label="Retour à l'accueil">
-					<img src="./IMG/Logo-Pokemon-128.png" alt="Logo RocketDev" />
+					<img src="./IMG/Logo-Pokemon-128.png" width="2rem" height="auto" alt="Logo RocketDev" />
 				</a>
 
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode" aria-label="Changer de mode (mode clair ou mode sombre)">
-						<img src="./IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" aria-hidden="true" />
+						<img src="./IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" loading="lazy" aria-hidden="true" />
 					</button>
 					<form id="searchPokemon">
 						<input id="search" type="search" required placeholder="Recherche" />
@@ -70,7 +70,7 @@
 					<!-- Section informations pokemon Zf -->
 					<div class="PokemonInfos">
 						<!-- Name pokemon -->
-						<h2 class="PokemonName"></h2>
+						<span class="PokemonName titleText"></span>
 						<span class="IdPokemon"></span>
 
 						<nav class="sectionCardNav">
@@ -119,7 +119,7 @@
 					</div>
 					<!-- Img pokemon -->
 					<figure id="figurePokemonZf">
-						<img src="#" id="imgPokemon" alt="Pokemon de présentation" />
+						<img src="#" id="imgPokemon" width="40rem" height="auto" alt="Pokemon de présentation" />
 						<div id="bgPokeball" aria-hidden="true"></div>
 					</figure>
 				</div>
