--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode" aria-label="Changer de mode (mode clair ou mode sombre)">
-						<img src="./IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" loading="lazy" aria-hidden="true" />
+						<img src="./IMG/POKEMON__ICONS/Icon-Moon.png" alt="Icon dark light mode switch" width="1.5rem" height="auto" loading="lazy" aria-hidden="true" />
 					</button>
 					<form id="searchPokemon">
-						<input id="search" type="search" required placeholder="Recherche" />
+						<input id="search" type="search" required aria-label="Recherche" placeholder="Recherche" />
 						<div>
-							<input type="submit" id="searchSubmit" placeholder="Rechercher" />
+							<input type="submit" id="searchSubmit" aria-label="Changer de mode" placeholder="Rechercher" />
 							<i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
 						</div>
 					</form>
@@ -163,7 +163,6 @@
 					</div>
 					<ul>
 						<li class="secondaryText">Navigation</li>
-						<li><a title="Page d'Accueil" href="#">Accueil</a></li>
 						<li><a title="Page du Pokédex" href="./HTML_PAGES/pokedex-pokemon-list.html">Pokédex</a></li>
 						<li><a title="Page de l'Équipe" href="./HTML_PAGES/team-pokemon.html">Équipe</a></li>
 					</ul>
