--- a/HTML_PAGES/pokedex-pokemon-list.html
+++ b/HTML_PAGES/pokedex-pokemon-list.html
@@ -41,12 +41,12 @@
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode" aria-label="Changer de mode (mode clair ou mode sombre)">
-						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" loading="lazy" aria-hidden="true" />
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" alt="Icon dark light mode switch" loading="lazy" aria-hidden="true" />
 					</button>
 					<form id="searchPokemon">
-						<input id="search" type="search" required placeholder="Recherche" />
+						<input id="search" type="search" required aria-label="Recherche" placeholder="Recherche" />
 						<div>
-							<input type="submit" id="searchSubmit" placeholder="Rechercher" />
+							<input type="submit" id="searchSubmit" aria-label="Changer de mode" placeholder="Rechercher" />
 							<i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
 						</div>
 					</form>
@@ -74,6 +74,7 @@
 						<div>
 							<span class="subText redText" id="placeText">Voici les Pokémons de : Kanto</span>
 							<fieldset class="spaceGap">
+								<legend>Choisir une région ou un type de Pokémon</legend>
 								<!-- Select pokemons -->
 								<select name="GenSelecting" id="GenSelecting" class="cta secondaryButton" aria-label="Sélectionner la région">
 									<option value="kanto">Trier par région</option>
@@ -139,7 +140,6 @@
 					</div>
 					<ul>
 						<li class="secondaryText">Navigation</li>
-						<li><a title="Page d'Accueil" href="../index.html">Accueil</a></li>
 						<li><a title="Page du Pokédex" href="./pokedex-pokemon-list.html">Pokédex</a></li>
 						<li><a title="Page de l'Équipe" href="./team-pokemon.html">Équipe</a></li>
 					</ul>
