--- a/HTML_PAGES/error-page.html
+++ b/HTML_PAGES/error-page.html
@@ -40,7 +40,7 @@
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode" aria-label="Changer de mode (mode clair ou mode sombre)">
-						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" loading="lazy" aria-hidden="true" />
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" width="1.5rem" height="auto" alt="Icon dark light mode switch" loading="lazy" aria-hidden="true" />
 					</button>
 				</div>
 			</div>
@@ -56,7 +56,7 @@
 					<!-- Section informations pokemon Zf -->
 					<div class="PokemonInfos">
 						<!-- Name pokemon -->
-						<span class="PokemonName titleText">Erreur 404, un Missingno est apparu !</span>
+						<h1 class="PokemonName titleText">Erreur 404, un Missingno est apparu !</h1>
 						<span class="IdPokemon">"C'est trop dangereux ici, tu dois partir avant qu'il ne soit trop tard !"</span>
 
 						<nav class="sectionCardNav">
