--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					</form>
 					<!-- Button Team -->
 					<button class="cta primaryButton" id="teamButton" aria-label="Gérer l'équipe Pokémon">
-						Équipe
+						<span>Équipe</span>
 						<i id="styleIcon" class="fa-solid fa-certificate" aria-hidden="true"></i>
 					</button>
 				</div>
